# realsensemptouch

./: .gitignore  camera_in_front_deepth_virtualplane.py  deteccion manos en  y pero no tan lejos.py  deteccion_distancia_sencilla.py  detect_close_objects_without clusterion.py  filtrando_Morphological filtering -.py  funciona_coordenadas y y deepth cambiadas.py  main copy 2.py  main copy.py  main.py  only_soften-withoutclusters.py  perpendicular detection.py  pyproject.toml  supersencillo.py  test with clustering.py  touch_tracker.py  working with hand detection.py
